small fix for spacing on Cookie and Policy pages

--- a/src/assets/styles/_custom.scss
+++ b/src/assets/styles/_custom.scss
@@ -19,3 +19,8 @@ a {
     margin-right: 1rem
   }
 }
+
+article.has-nav-spacing,
+.has-nav-spacing.hero {
+  padding-top: 132px
+}
